[package]
edition = "2021"
name = "green_quest"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 1

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = "0.12"
bevy_asset_loader = "0.19"
bevy_ecs_ldtk = "0.9"
bevy_pixel_camera = "0.12"
